--- a/src/html/testEval.html
+++ b/src/html/testEval.html
@@ -27,7 +27,7 @@
             <img src="./images/delet.png" alt="关闭">
             <h1>评价</h1>
             <div class="right">
-                <span></span>
+                <span class="bord"></span>
                 <span>匿名</span>
             </div>
         </header>
