--- a/src/html/testEval.html
+++ b/src/html/testEval.html
@@ -52,7 +52,7 @@
     </div>
     <div class="textarea">
         <textarea id="textarea" placeholder="请输入您的意见或建议（必填）"></textarea>
-        <span>至少30个字</span>
+        <span id="evalText">至少30个字</span>
     </div>
     <button id="submit">提交</button>
 </div>
